--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
 	id 'war'
+	id 'lenala.azure.azurewebapp' version '1.0'
 }
 
 group = 'com.example'
@@ -26,4 +27,20 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+azureWebApp {
+    resourceGroup = 'com.example'
+    appName = 'messagesServiceMongo'
+    appService = {
+        type = 'windows'
+        javaWebContainer = 'tomcat 8.5'
+        javaVersion = '1.8'
+    }
+    authentication = {
+        type = 'azurecli'
+    }
+    deployment = {
+        type = 'war'
+    }
 }
