--- a/.github/workflows/main_messages-mongo.yml
+++ b/.github/workflows/main_messages-mongo.yml
@@ -21,7 +21,7 @@ jobs:
         java-version: '8'
 
     - name: Build with Gradle
-      run: gradle build
+      run: gradle war messagesServiceMongo
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
