--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.4.0'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
-	id 'jar'
+	id 'war'
 	id 'lenala.azure.azurewebapp' version '1.0.1'
 }
 
@@ -29,7 +29,7 @@ test {
 	useJUnitPlatform()
 }
 
-jar {
+war {
     enabled = true
 }
 
@@ -48,6 +48,6 @@ azureWebApp {
         file = 'my.azureauth'
     }
     deployment = {
-        type = 'jar'
+        type = 'war'
     }
 }
